# PathTracer

./: CMakeLists.txt  README.md
include/: bmp_24.hpp  camera.hpp  material.hpp  meshobject.hpp  ray.hpp  sphere.hpp  util.hpp  vec3.hpp
src/: CMakeLists.txt  main.cpp  material.cpp  sphere.cpp  util.cpp  vec3.cpp
